# ChangeLog for dev-perl/Text-CSV_XS
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.22 2007/11/10 14:54:42 drac Exp $

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Text-CSV_XS-0.30.ebuild:
  amd64 stable

*Text-CSV_XS-0.31 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Text-CSV_XS-0.31.ebuild:
  Version bump

  06 Oct 2007; Tom Gall <tgall@gentoo.org> Text-CSV_XS-0.30.ebuild:
  stable on ppc64

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Text-CSV_XS-0.30.ebuild:
  Stable on ppc.

  09 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Text-CSV_XS-0.30.ebuild:
  Stable on sparc

  30 Jul 2007; Raúl Porcel <armin76@gentoo.org> Text-CSV_XS-0.30.ebuild:
  alpha/ia64/x86 stable

  23 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  Text-CSV_XS-0.29.ebuild:
  Stable on sparc

  22 Jul 2007; Tom Gall <tgall@gentoo.org> Text-CSV_XS-0.29.ebuild:
  stable on ppc64

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> Text-CSV_XS-0.29.ebuild:
  alpha/ia64/x86 stable

  07 Jul 2007; Tom Gall <tgall@gentoo.org> Text-CSV_XS-0.26.ebuild:
  stable on ppc64

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Text-CSV_XS-0.26.ebuild:
  Marking sparc stable

*Text-CSV_XS-0.30 (25 Jun 2007)

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Text-CSV_XS-0.30.ebuild:
  Version bump

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Text-CSV_XS-0.25.ebuild:
  Marking sparc stable

*Text-CSV_XS-0.29 (13 Jun 2007)

  13 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  +Text-CSV_XS-0.29.ebuild:
  Version bump

*Text-CSV_XS-0.26 (24 May 2007)

  24 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Text-CSV_XS-0.26.ebuild:
  Version bump

*Text-CSV_XS-0.25 (12 May 2007)

  12 May 2007; Michael Cummings <mcummings@gentoo.org>
  +Text-CSV_XS-0.25.ebuild:
  Version bump

  19 Jan 2007; Michael Cummings <mcummings@gentoo.org>