@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Text-CSV_XS
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.22 2007/11/10 14:54:42 drac Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Text-CSV_XS/ChangeLog,v 1.23 2008/01/23 19:19:31 armin76 Exp $
+
+  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> Text-CSV_XS-0.31.ebuild:
+  alpha/ia64/sparc/x86 stable
 
   10 Nov 2007; Samuli Suominen <drac@gentoo.org> Text-CSV_XS-0.30.ebuild:
   amd64 stable
